[package]
name = "ParamEnum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.9"
error-chain = "0.12.4"
tokio = { version = "1.2.0", features = ["full"] }
regex = "1"
fancy-regex = "0.8.0"
